feat: Formulario de contato adicionado

--- a/style.css
+++ b/style.css
@@ -75,6 +75,8 @@ header {
 
 #sobre {
     height: 800px;
+
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
 
@@ -85,9 +87,15 @@ header {
 }
 
 h2 {
+    font-family: "Anta";
+    font-size: 28px;
+
+
+}
+
+#sobre p {
     font-family: "Montserrat";
     font-size: 17px;
-
     text-align: left;
 }
 
@@ -203,12 +211,12 @@ h2 {
     flex-direction: column;
     justify-content: center;
 
-    
+
 }
 
 #portfolio a {
     width: fit-content;
-    
+
     font-family: "Anta";
     font-size: 28px;
 
@@ -216,9 +224,133 @@ h2 {
 
     z-index: 0;
 
-   
+
 }
 
 #portfolio a:hover {
     transform: scale(1.05);
+}
+
+#contato {
+    text-align: center;
+
+    padding-bottom: 100px;
+    margin-bottom: 100px;
+
+}
+
+#contato h2 {
+    margin-bottom: 70px;
+}
+
+#contato form {
+    width: 50%;
+
+    margin: 0 auto;
+    padding: 60px 0;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    border-radius: 80px;
+
+    background-color: var(--roxo-gamifica);
+
+    color: white;
+    font-family: "Montserrat";
+}
+
+#contato form label {
+    margin-bottom: 15px;
+    font-size: 17px;
+
+}
+
+.campo {
+    width: 60%;
+
+    margin-bottom: 50px;
+
+    text-align: left;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.campo input {
+    height: 40px;
+
+    color: white;
+    background-color: #351868;
+
+    border: none;
+    border-radius: 4px;
+
+    outline: none;
+
+    text-indent: 10px;
+    font-size: 17px;
+    font-family: "Montserrat";
+
+}
+
+.campo-textarea {
+    width: 60%;
+
+    margin-bottom: 30px;
+
+    text-align: left;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.campo-textarea textarea {
+    color: white;
+    background-color: #351868;
+
+    border: none;
+    border-radius: 4px;
+
+    padding: 10px;
+
+    font-family: "Montserrat";
+    font-size: 17px;
+
+    outline: none;
+
+    resize: none;
+}
+
+.campo input:focus, .campo-textarea textarea:focus {
+    outline: 2px solid var(--laranja-gamifica);
+}
+
+
+#contato form button {
+    height: 40px;
+    width: 60%;
+
+    font-family: "Montserrat";
+    font-size: 17px;
+    font-weight: 600;
+
+    color: white;
+    background-color: var(--laranja-gamifica);
+
+    border: none;
+    border-radius: 4px;
+
+    cursor: pointer;
+
+    text-transform: uppercase;
+
+    transition: background-color 500ms ease;
+}
+
+#contato form button:hover {
+    background-color: #ad4929;
 }
