--- a/style.css
+++ b/style.css
@@ -32,12 +32,22 @@
     background-position: 165% 40%;
 }
 
+header img {
+    width: 290px;
+}
+
 header {
     height: 165px;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.menu {
+    width: 700px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .menu a {
@@ -439,3 +449,92 @@ footer .container-grid {
 .icones-redes a:hover {
     color: var(--laranja-gamifica)
 }
+
+@media screen and (max-width: 1300px) {
+    header {
+        position: relative;
+
+    }
+
+    header button {
+        width: 50px;
+
+        display: unset;
+
+        background: none;
+        border: none;
+    }
+
+    header svg{
+        fill:white;
+    }
+
+    nav.menu {
+        height: 500px;
+        width: 350px;
+    
+        padding: 0px 30px;
+    
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: flex-start;
+    
+        background-color: #000000f0;
+    
+        position: absolute;
+        top: 165px;
+        right: 0px;
+    }
+
+    #sobre {
+        padding: 100px 15%;
+    }
+
+    .card{
+        height: 320px;
+        width: 200px;
+    }
+
+    #contato form {
+        width: 75%;
+    }
+}
+
+@media screen and (max-width: 1080px) {
+    .container-cards {
+        flex-wrap: wrap;
+    }
+    
+    .card {
+        height: 400px;
+
+        flex-grow: 0;
+        flex-shrink: 0;
+        flex-basis: 40%;
+    }
+
+    footer {
+        height: unset;
+    }
+
+    footer .container-grid {
+        padding: 80px;
+
+        flex-direction: column;
+    }
+
+    footer img {
+        margin-bottom: 100px;
+    }
+
+    footer p {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 40px;
+    }
+
+    .redes-sociais {
+        align-items: center;
+    }
+}
+
