feat: Menu de hamburguer do gamifica com responsividade concluido

--- a/style.css
+++ b/style.css
@@ -450,6 +450,14 @@ footer .container-grid {
     color: var(--laranja-gamifica)
 }
 
+.menu-fechado{
+    display: none;
+}
+
+#icone-barras{
+    display: none;
+}
+
 @media screen and (max-width: 1300px) {
     header {
         position: relative;
@@ -590,8 +598,6 @@ footer .container-grid {
 
     nav.menu {
         width: 100%;
-
-        display: none;
 
     }
 
